Trying different kinds of linking the images

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -21,6 +21,19 @@ const cards = await Astro.glob('../projects/*.md');
             ))}
         </div> 
 
+        <img src="assets/images/SentientBuffet/SentientBuffetThumbnail.png"/>
+        <img src="/assets/images/SentientBuffet/SentientBuffetThumbnail.png"/>
+        <img src="src/assets/images/SentientBuffet/SentientBuffetThumbnail.png"/>
+        <img src="../assets/images/SentientBuffet/SentientBuffetThumbnail.png"/>
+        <img src="/../assets/images/SentientBuffet/SentientBuffetThumbnail.png"/>
+
+        <img src="SpellboundRollers.png"/>
+        <img src="images/SpellboundRollers.png"/>
+        <img src="/images/SpellboundRollers.png"/>
+        <img src="src/images/SpellboundRollers.png"/>
+        <img src="../images/SpellboundRollers.png"/>
+        <img src="/../images/SpellboundRollers.png"/>
+
         <!-- <ProjectCard title="Test" description="Description" imagePath="../../public/images/SentinetBuffetThumbnail.png"/>
         <div class="container">
             {postMessage.map(post => (
