Trying another image link

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -27,6 +27,7 @@ const cards = await Astro.glob('../projects/*.md');
         <img src="../assets/images/SentientBuffet/SentientBuffetThumbnail.png"/>
         <img src="/../assets/images/SentientBuffet/SentientBuffetThumbnail.png"/>
 
+        <img src="../SpellboundRollers.png"/>
         <img src="SpellboundRollers.png"/>
         <img src="images/SpellboundRollers.png"/>
         <img src="/images/SpellboundRollers.png"/>
