--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -26,6 +26,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        margin: 0;
         padding: 0 20px;
     }
     
