--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -25,7 +25,7 @@ const userLocale="en-UK";
 ---
 
 <Layout title={frontmatter.title}>
-    <section class="page-content">
+    <article>
         <div class="container markdown">
             <div class="card">
                 <h1>{frontmatter.title}</h1>
@@ -43,7 +43,7 @@ const userLocale="en-UK";
                 <Content />
             </div>
         </div>
-    </section>
+    </article>
 </Layout>
 
 <style>
