--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,15 +1,33 @@
-body {
-    font-family: 'Roboto', sans-serif;
+:root {
     font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+
+    /* Colors 
+        - Background & text colors are in .light and .dark classes
+        - Tag Colors are in TagDisplay
+    */
+    --color-btn: #416EAF;
+}
+
+body {
     line-height: 1.5;
     background: var(--color-primary);
     color: var(--color-text);
+    margin: 0;
+    padding: 0;
 }
-
 
 h1, h2 {
     line-height: 1.2;
     text-align: center;
+}
+
+h1 { font-size: 2rem; }
+h2 { font-size: 1.5rem; }
+h3 { font-size: 1.3rem; }
+
+p, li {
+    line-height: 1.75;
 }
 
 a {
@@ -17,11 +35,7 @@ a {
     color: #416EAF;
 }
 
-p, li {
-    line-height: 1.75;
-}
-
-/* Cusotm Global Classes */
+/* Custom Global Classes */
 
 /* Themes */
 .light {
@@ -33,78 +47,50 @@ p, li {
 
 .dark {
     --color-primary: #424242;
-    --color-secondary: #303030;
-    --color-tertiary: #212121;
+    --color-secondary: #212121;
+    --color-tertiary: #303030;
     --color-text: #ffffff;
 }
-
 
 /* Card */
 
 .card {
-    background-color: var(--color-tertiary);
-    padding: 20px;
+    background-color: var(--color-secondary);
+    padding: 25px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
-}
-
-/* Page Content */
-.page-content {
-    margin: 20px 0;
-}
-
-.page-content h2,
-.page-content h3 {
-    margin: 15px 0;
-}
-
-.page-content h1 {
-    font-size: 45px;
-}
-
-.page-content h2 {
-    font-size: 40px;
-}
-
-.page-content h3 {
-    font-size: 25px;
 }
 
 /* Other Classes */
 
 .container {
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 20px auto;
     padding: 0 30px;
 }
 
 .btn {
-    display: inline-block;
     display: flex;
     padding: 0.75rem 1rem;
     border-radius: 5px;
-    background: #416EAF;
+    background: var(--color-btn);
     color: var(--color-text);
     text-transform: uppercase;
     font-size: 0.8rem;
     letter-spacing: 1px;
-    text-align: center;
     text-decoration: none;
     justify-content: center;
 }
 
-.logos-small {
-    display: none;
-}
-
 /* Markdown / Project posts */
 
+/* Similar to .btn */
 .markdown a {
     display: inline-block;
     padding: 0.1rem 0.5rem;
     border-radius: 5px;
-    background: #416EAF;
+    background: var(--color-btn);
     color: var(--color-text);
     text-transform: uppercase;
     font-size: 0.75rem;
@@ -118,25 +104,8 @@ img {
     width: 100%;
     max-width: 500px;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto ;
+    border-radius: 10px;
 }
 
 /* Media Queries */
-
-@media (max-width: 960px) {
-    .logos-small {
-        display: block;
-        margin: auto;
-    }
-    .logos {
-        display: none;
-    }
-}
-
-@media (max-width: 500px) {  
-    h1,
-    h2 {
-        text-align: center;
-    }
-}
