Change the scrollbar to a custom one, change header font

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,6 +19,8 @@
     .header {
         height: 70px;
         background: var(--color-secondary);
+        font-family: 'League Spartan', sans-serif;
+        font-size: 1.25rem;
     }
     
     .header .container {
@@ -26,7 +28,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        margin: 0;
+        margin: 0 auto;
         padding: 0 20px;
     }
     
