--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -35,6 +35,21 @@ a {
     color: #416EAF;
 }
 
+::-webkit-scrollbar {
+    width: 15px;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888888;
+    border-radius: 10px;
+}
+
 /* Custom Global Classes */
 
 /* Themes */
