--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -31,7 +31,7 @@ const userLocale="en-UK";
                 <h1>{frontmatter.title}</h1>
                 <img src={frontmatter.thumbnailPath} alt={frontmatter.title + " image"}>
                 <div style="height: 25px;"></div> <!-- Small block to seperate img and tags -->
-                <TagDisplay tags={frontmatter.tags}/>
+                <TagDisplay tags={frontmatter.tags} project={frontmatter.title}/>
                 <h4><strong>Release Date: </strong>{new Date(frontmatter.releaseDate).toLocaleDateString(userLocale, dateOptions)}</h4>
                 <ul class="list-of-links">
                     <li>{frontmatter.projectLink != null && <a href={frontmatter.projectLink}>Project Link</a>}</li>
