--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,7 +32,7 @@ p, li {
 
 a {
     text-decoration: none;
-    color: #416EAF;
+    color: var(--color-btn);
 }
 
 ::-webkit-scrollbar {
@@ -123,4 +123,73 @@ img {
     border-radius: 10px;
 }
 
+.tag-container.card {
+    background: var(--color-tertiary) ;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    padding: 5px 20px 5px 20px;
+    margin-bottom: 20px;
+}
+
+.tag-container p {
+    margin-right: 10px;
+}
+.tag-container ul {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    list-style: none;
+}
+
+.tag {
+    padding: 1px 10px;
+    margin: 10px 10px 10px 0px;
+    border-radius: 20px;
+    border-style: solid;
+}
+
+/* Tags Colors */
+.engine-tag {
+    background-color: #008080;
+    border-color: #008080;;
+}
+.project-type-tag {
+    background-color: #B33333;
+    border-color: #B33333;
+}
+.platform-tag {
+    background-color: #6B8E23;
+    border-color: #6B8E23;
+}
+/* Other colors for future tags: 
+    #416EAF
+    #228B22 (Forest Green)
+    #008080 (teal green)
+    #6B8E23 (olive drab)
+*/
+.unknownTag {
+    background-color: #000000;
+    border-color: #000000;
+}
+
+.tag-container-filter-panel .tag {
+    opacity: 0.5;
+}
+.fa-plus, .fa-minus {
+    display: none;
+}
+.tag.includeTag , .tag.excludeTag{
+    opacity: 1;
+}
+.includeTag .fa-plus,
+.excludeTag .fa-minus {
+    display: inline;
+}
+
+.excludeTag {
+    background-color: transparent;
+    border-style: solid;
+}
 /* Media Queries */
