--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -56,4 +56,22 @@ const userLocale="en-UK";
     .list-of-links li {
         padding-right: 15px;
     }
+    
+    /* Markdown / Project posts */
+
+    /* Similar to .btn */
+    .markdown a {
+        display: inline-block;
+        padding: 0.1rem 0.5rem;
+        border-radius: 5px;
+        background: var(--color-btn);
+        color: var(--color-text);
+        text-transform: uppercase;
+        font-size: 0.75rem;
+        letter-spacing: 1px;
+        text-align: center;
+        text-decoration: none;
+        transform: translateY(-0.1rem);
+    }
+
 </style>
