--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,4 +1,5 @@
 ---
+import type { Tags } from '../others/tags';
 import TagDisplay from './TagDisplay.astro';
 
 export interface Props {
@@ -6,7 +7,7 @@ export interface Props {
     description: string;
     thumbnailPath?: string;
     slug: string;
-    tags: string
+    tags: Tags[];
 };
 
 const {title, description, thumbnailPath = '', slug, tags} = Astro.props as Props;
