Fix css not appearing clearly in markdown

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -89,7 +89,7 @@ a {
 
 .container {
     max-width: 1200px;
-    margin: 20px auto;
+    margin: 30px auto;
     padding: 0 30px;
 }
 
@@ -177,5 +177,23 @@ a {
 .excludeTag {
     background-color: transparent;
     border-style: solid;
+}
+
+
+/* Markdown / Project posts */
+
+/* Similar to .btn */
+.inlineBtn, .markdown a {
+    display: inline-block;
+    padding: 0.1rem 0.5rem;
+    border-radius: 5px;
+    background: var(--color-btn);
+    color: var(--color-text);
+    text-transform: uppercase;
+    font-size: 0.75rem;
+    letter-spacing: 1px;
+    text-align: center;
+    text-decoration: none;
+    transform: translateY(-0.1rem);
 }
 /* Media Queries */
