--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -33,21 +33,23 @@ const userLocale="en-UK";
 
 <Layout title={data.title}>
     <article>
-        <div class="container markdown">
+        <div class="container">
             <div class="card">
                 <h1>{data.title}</h1>
                 <img src={data.thumbnailPath} alt={data.title + " image"}>
                 <div style="height: 25px;"></div> <!-- Small block to seperate img and tags -->
                 <TagDisplay tags={data.tags} project={data.title}/>
                 <h4><strong>Release Date: </strong>{new Date(data.releaseDate).toLocaleDateString(userLocale, dateOptions)}</h4>
-                <ul class="list-of-links">
+                <ul class="markdown list-of-links">
                     <li>{data.projectLink != null && <a href={data.projectLink}>Project Link</a>}</li>
                     <li>{data.githubLink != null && <a href={data.githubLink}>GitHub Link</a>}</li>
                 </ul>
                 <h3>Description</h3>
                 <p>{data.shortDescription}</p>
                 <hr>
-                <Content />
+                <div class="markdown">
+                    <Content />
+                </div>
             </div>
         </div>
     </article>
@@ -62,23 +64,6 @@ const userLocale="en-UK";
 
     .list-of-links li {
         padding-right: 15px;
-    }
-    
-    /* Markdown / Project posts */
-
-    /* Similar to .btn */
-    .markdown a {
-        display: inline-block;
-        padding: 0.1rem 0.5rem;
-        border-radius: 5px;
-        background: var(--color-btn);
-        color: var(--color-text);
-        text-transform: uppercase;
-        font-size: 0.75rem;
-        letter-spacing: 1px;
-        text-align: center;
-        text-decoration: none;
-        transform: translateY(-0.1rem);
     }
 
 </style>
